--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.login-bg {
+  background-color: black;
+  background-image: radial-gradient(circle, rgba(255, 255, 255, 0.1) 1.3px, transparent 1px);
+  background-size: 20px 20px;
+}
