--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #312b2b;
   --foreground: #171717;
 }
 
@@ -19,6 +19,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
 
 .login-bg {
   background-color: black;
